Relocate retro's routines in submodules.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # Ignore binaries
 bin
-lib
+*.so
+*.a
 *.b
+*.pyc
+*.pyo
+lib/python/*.py
 
 # Ignore topographic data (too large).
 share/topography
