--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "tinydir"]
 	path = deps/tinydir
 	url = https://github.com/cxong/tinydir.git
+[submodule "roar"]
+	path = deps/roar
+	url = https://github.com/niess/roar.git
+[submodule "jsmn-tea"]
+	path = deps/jsmn-tea
+	url = https://github.com/niess/jsmn-tea.git
